--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "here",
+  "name": "reactfront",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://lbaker15.github.io/Reactfront",
+  "homepage": "http://lbaker15.github.io/ReactPhoto",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -10,8 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "reactstrap": "^8.9.0",
+    "react-scripts": "^4.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
